--- a/src/index.html
+++ b/src/index.html
@@ -138,9 +138,8 @@
             <div class="about__content">
               <h2 class="about__title">Об авторе</h2>
               <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
-                занимаетесь, какими технологиями разработки владеете.
-                <br>
-                <br>
+                занимаетесь, какими технологиями разработки владеете.</p>
+                <p class="about__text">
                 Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
                 потенциальным заказчикам.</p>
             </div>
