--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.e12c302cee5f737e1c4d.css?a72dbd35449fbd50f982">
+  <link rel="stylesheet" href="../index.5f21deebbfedae1b66d2.css?e053cfbe9758d965fb7a">
 </head>
 
 <body>
@@ -77,9 +77,8 @@
         <div class="about__content">
           <h2 class="about__title">Об авторе</h2>
           <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
-            занимаетесь, какими технологиями разработки владеете.
-            <br>
-            <br>
+            занимаетесь, какими технологиями разработки владеете.</p>
+            <p class="about__text">
             Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
             потенциальным заказчикам.</p>
         </div>
@@ -189,7 +188,7 @@
         </a>
       </div>
     </footer>
-    <script src="../about/about.a72dbd35449fbd50f982.js?a72dbd35449fbd50f982"></script>
+    <script src="../about/about.e053cfbe9758d965fb7a.js?e053cfbe9758d965fb7a"></script>
   </div>
 </body>
 </html>
