--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
   <title>News Explorer</title>
-  <link rel="stylesheet" href="index.a493c5e9faea9d087eb2.css">
+  <link rel="stylesheet" href="index.6e23933e7bfa94cb7d6d.css">
 </head>
 
 <body>
-<div class="page">
+  <div class="page">
     <div class="content">
-<header class="header">
+      <header class="header">
         <nav class="menu">
           <a class="menu__logo" href="./">NewsExplorer</a>
           <ul class="menu__column-links">
@@ -43,11 +43,12 @@
                 <span class="popup__tip">Email</span>
                 <input required id="formAddName" type="email" name="name" class="popup__input popup__input_type_name"
                   placeholder="Введите почту">
-                <span class="popup__input-name-err" id="errorAddName"  aria-live="polite">Неправильный формат email</span>
+                <span class="popup__input-name-err" id="errorAddName" aria-live="polite">Неправильный формат
+                  email</span>
                 <span class="popup__tip">Пароль</span>
                 <input id="formAddUrl" required type="text" minlength="8" name="link"
                   class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
-                 <button id="addSbmBtn" type="submit" class="popup__button">Войти</button>
+                <button id="addSbmBtn" type="submit" class="popup__button">Войти</button>
               </form>
               <div class="popup__reg">
                 <span>или </span><a class="popup__reg-link" href="">Зарегистрироваться</a></div>
@@ -55,12 +56,12 @@
           </div>
         </div>
       </header>
-<main>
-  <section class="preloader">
+      <main>
+        <section class="preloader">
           <div class="preloader__wrapper preloader__wrapper_search">
-          <i class="preloader__circle"></i>
-          <span class="preloader__search-text">Идет поиск новостей...</span>
-        </div>
+            <i class="preloader__circle"></i>
+            <span class="preloader__search-text">Идет поиск новостей...</span>
+          </div>
           <div class="preloader__wrapper preloader__wrapper_not-found">
             <img class="preloader__not-found-img" src="./images/not-found.svg"
               alt="Картинка ничего не найдено">
@@ -70,7 +71,7 @@
           </div>
         </section>
 
-   <section class="results">
+        <section class="results">
           <div class="results__main-container">
             <h2 class="results__title">Результаты поиска</h2>
             <div class="results__continer">
@@ -137,16 +138,15 @@
             <div class="about__content">
               <h2 class="about__title">Об авторе</h2>
               <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
-                занимаетесь, какими технологиями разработки владеете.
-                <br>
-                <br>
+                занимаетесь, какими технологиями разработки владеете.</p>
+                <p class="about__text">
                 Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
                 потенциальным заказчикам.</p>
             </div>
           </div>
         </section>
-</main>
-<footer class="footer">
+      </main>
+      <footer class="footer">
         <p class="footer__copyright">&copy; 2019. Владимир Буланый</p>
         <nav>
           <ul class="footer__menu">
@@ -164,9 +164,9 @@
           </a>
         </div>
       </footer>
-</div>
+    </div>
   </div>
-<script src="main.a72dbd35449fbd50f982.js"></script>
+  <script src="main.e053cfbe9758d965fb7a.js"></script>
 </body>
 
 </html>
