--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,12 @@
       <header class="header">
         <nav class="menu">
           <a class="menu__logo" href="./">NewsExplorer</a>
+          <div class="menu__mobile" id="mobile-menu"></div>
           <ul class="menu__column-links">
             <li class="menu__item menu__item_active"><a class="menu__column-link menu__column-link_active"
                 href="./">Главная</a></li>
             <li class="menu__item"><a class="menu__column-link" href="./about/">О проекте</a></li>
-            <li class="menu__item"><a class="menu__column-link" href="./news/">Сохранённые статьи</a></li>
+            <li class="menu__item menu__item_hidden" ><a class="menu__column-link menu__column-link_hidden" href="./news/">Сохранённые статьи</a></li>
             <li class="menu__item"><a class="menu__column-link  menu__link-auth" href="">Авторизоваться</a></li>
           </ul>
         </nav>
