--- a/src/pages/about/index.html
+++ b/src/pages/about/index.html
@@ -16,6 +16,7 @@
     <header class="header header_white">
       <nav class="menu">
         <a class="menu__logo menu__logo_black" href="../">NewsExplorer</a>
+        <div class="menu__mobile menu__mobile_black" id="mobile-menu"></div>
         <ul class="menu__column-links">
           <li class="menu__item"><a class="menu__column-link menu__colunm-link_black" href="../">Главная</a></li>
           <li class="menu__item menu__item_active"><a class="menu__column-link menu__colunm-link_grey"
@@ -174,7 +175,7 @@
       <p class="footer__copyright footer__copyright_grey">&copy; 2019. Владимир Буланый</p>
       <nav>
         <ul class="footer__menu">
-          <li class="footer__menu-link"><a href="./">Главная</a></li>
+          <li class="footer__menu-link"><a href="../">Главная</a></li>
           <li class="footer__menu-link"><a href="./about">О проектке</a></li>
           <li class="footer__menu-link"><a href="https://praktikum.yandex.ru">Яндекс.Практикум</a></li>
         </ul>
