--- a/src/index.html
+++ b/src/index.html
@@ -44,10 +44,10 @@
                 <span class="popup__tip">Email</span>
                 <input required id="formAddName" type="email" name="name" class="popup__input popup__input_type_name"
                   placeholder="Введите почту">
-                <span class="popup__input-name-err" id="errorAddName" aria-live="polite">Неправильный формат
+                <span class="popup__input-name-err popup__err" id="errorAddName" aria-live="polite">Неправильный формат
                   email</span>
                 <span class="popup__tip">Пароль</span>
-                <input id="formAddUrl" required type="text" minlength="8" name="link"
+                <input id="formAddUrl" required type="password" minlength="8" name="link"
                   class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
                 <button id="addSbmBtn" type="submit" class="popup__button">Войти</button>
               </form>
