--- a/src/pages/about/index.html
+++ b/src/pages/about/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
   <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.about.css %>">
+  <link rel="icon" href="../<%= require('../../images/favicon.png')%>" type="image/png">
 </head>
 
 <body>
