--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,8 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.5f21deebbfedae1b66d2.css?e053cfbe9758d965fb7a">
+  <link rel="stylesheet" href="../css/style.b28ce7d7fad4314dba92.css?b81fa58c3607919aa93d">
+  <link rel="icon" href=".././images/favicon.png" type="image/png">
 </head>
 
 <body>
@@ -16,6 +17,7 @@
     <header class="header header_white">
       <nav class="menu">
         <a class="menu__logo menu__logo_black" href="../">NewsExplorer</a>
+        <div class="menu__mobile menu__mobile_black" id="mobile-menu"></div>
         <ul class="menu__column-links">
           <li class="menu__item"><a class="menu__column-link menu__colunm-link_black" href="../">Главная</a></li>
           <li class="menu__item menu__item_active"><a class="menu__column-link menu__colunm-link_grey"
@@ -174,8 +176,8 @@
       <p class="footer__copyright footer__copyright_grey">&copy; 2019. Владимир Буланый</p>
       <nav>
         <ul class="footer__menu">
-          <li class="footer__menu-link"><a href="./">Главная</a></li>
-          <li class="footer__menu-link"><a href="./about">О проектке</a></li>
+          <li class="footer__menu-link"><a href="../">Главная</a></li>
+          <li class="footer__menu-link"><a href="../about">О проектке</a></li>
           <li class="footer__menu-link"><a href="https://praktikum.yandex.ru">Яндекс.Практикум</a></li>
         </ul>
       </nav>
@@ -188,7 +190,7 @@
         </a>
       </div>
     </footer>
-    <script src="../about/about.e053cfbe9758d965fb7a.js?e053cfbe9758d965fb7a"></script>
+    <script src="../about/about.b81fa58c3607919aa93d.js?b81fa58c3607919aa93d"></script>
   </div>
 </body>
 </html>
