--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
   <title>News Explorer</title>
-  <link rel="stylesheet" href="css/style.14a85fd771abbde0db48.css">
+  <link rel="stylesheet" href="css/style.04ab1aadb08538d05c8c.css">
   <link rel="icon" href="./images/favicon.png" type="image/png">
 </head>
 
@@ -40,18 +40,18 @@
           <!-- Форма входа -->
           <div class="popup popupAdd">
             <div class="popup__content">
-              <img id="formAddClose" src="./images/close.svg" alt="закрытие формы" class="popup__close">
+              <img src="./images/close.svg" alt="закрытие формы" class="popup__close">
               <h3 class="popup__title">Вход</h3>
-              <form id="formAdd" class="popup__form" name="new">
+              <form class="popup__form" name="new">
                 <span class="popup__tip">Email</span>
-                <input required id="formAddName" type="email" name="name" class="popup__input popup__input_type_name"
+                <input required type="email" name="name" class="popup__input popup__input_type_name"
                   placeholder="Введите почту">
-                <span class="popup__input-name-err popup__err" id="errorAddName" aria-live="polite">Неправильный формат
+                <span class="popup__input-name-err popup__err" aria-live="polite">Неправильный формат
                   email</span>
                 <span class="popup__tip">Пароль</span>
-                <input id="formAddUrl" required type="password" minlength="8" name="link"
+                <input required type="password" minlength="8" name="link"
                   class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
-                <button id="addSbmBtn" type="submit" class="popup__button">Войти</button>
+                <button type="submit" class="popup__button">Войти</button>
               </form>
               <div class="popup__reg">
                 <span class="popup__reg-sp">или </span><a class="popup__reg-link" href="">Зарегистрироваться</a></div>
@@ -60,23 +60,23 @@
           <!-- Форма регистрации -->
           <div class="popup popupReg">
             <div class="popup__content">
-              <img id="formAddClose" src="./images/close.svg" alt="закрытие формы" class="popup__close">
+              <img src="./images/close.svg" alt="закрытие формы" class="popup__close">
               <h3 class="popup__title">Регистрация</h3>
-              <form id="formAdd" class="popup__form" name="new">
+              <form class="popup__form" name="new">
                 <span class="popup__tip">Email</span>
-                <input required id="formAddName" type="email" name="name" class="popup__input popup__input_type_name"
+                <input required type="email" name="name" class="popup__input popup__input_type_name"
                   placeholder="Введите почту">
-                <span class="popup__input-name-err popup__err" id="errorAddName" aria-live="polite">Неправильный формат
+                <span class="popup__input-name-err popup__err" aria-live="polite">Неправильный формат
                   email</span>
                 <span class="popup__tip">Пароль</span>
-                <input id="formAddUrl" required type="password" minlength="8" name="pass"
+                <input required type="password" minlength="8" name="pass"
                   class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
-                  <span class="popup__input-pass-err popup__err" id="errorAddName" aria-live="polite">Минимум 8 символов</span>
+                  <span class="popup__input-pass-err popup__err"  aria-live="polite">Минимум 8 символов</span>
                 <span class="popup__tip">Имя</span>
-                <input id="formAddName" required type="text" minlength="2" name="link"
+                <input required type="text" minlength="2" name="link"
                   class="popup__input popup__input_type_link-url" placeholder="Введите имя">
-                  <span class="popup__input-pass-err popup__err" id="errorAddName" aria-live="polite">Минимум 2 символа</span>
-                <button id="addSbmBtn" type="submit" class="popup__button">Войти</button>
+                  <span class="popup__input-pass-err popup__err" aria-live="polite">Минимум 2 символа</span>
+                <button type="submit" class="popup__button">Войти</button>
               </form>
               <div class="popup__reg">
                 <span class="popup__reg-sp">или </span><a class="popup__reg-link" href="">Войти</a></div>
@@ -85,10 +85,10 @@
           <!-- Успешная регистрация -->
           <div class="popup popupReg">
               <div class="popup__content_succeeded">
-                <img id="formAddClose" src="./images/close.svg" alt="закрытие формы" class="popup__close">
+                <img src="./images/close.svg" alt="закрытие формы" class="popup__close">
                 <h3 class="popup__title">Пользователь успешно зарегистрирован!</h3>
                 <div class="popup__reg_succeeded">
-                </span><a class="popup__reg-link" href="">Выполнить вход</a></div>
+                <a class="popup__reg-link" href="">Выполнить вход</a></div>
               </div>
             </div>
         </div>
@@ -203,7 +203,7 @@
       </footer>
     </div>
   </div>
-  <script src="main.47b4a9509581bcc216a2.js"></script>
+  <script src="main.b670cc5be5b39a539cc7.js"></script>
 </body>
 
 </html>
