--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../css/style.b28ce7d7fad4314dba92.css?1277d8ed4b841e8877dc">
+  <link rel="stylesheet" href="../css/style.39c6536237bdfe379bfc.css?d644f240761308deb1d8">
   <link rel="icon" href=".././images/favicon.png" type="image/png">
 </head>
 
@@ -75,6 +75,11 @@
     <section class="about">
       <div class="about__wrapper">
         <div class="about__photo">
+          <picture>
+            <source media="(max-width: 1023px)" srcset=".././images/avatar-300.png" >
+            <source media="(max-width: 1600px)" srcset=".././images/avatar-500.png" >
+            <img class="about__img" src=".././images/avatar.png" alt="Фото на аватар">
+          </picture>
         </div>
         <div class="about__content">
           <h2 class="about__title">Об авторе</h2>
@@ -190,7 +195,7 @@
         </a>
       </div>
     </footer>
-    <script src="../about/about.1277d8ed4b841e8877dc.js?1277d8ed4b841e8877dc"></script>
+    <script src="../about/about.d644f240761308deb1d8.js?d644f240761308deb1d8"></script>
   </div>
 </body>
 </html>
