--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
   <title>News Explorer</title>
-  <link rel="stylesheet" href="css/style.14a85fd771abbde0db48.css">
+  <link rel="stylesheet" href="css/style.270c7b879177dbca2a92.css">
   <link rel="icon" href="./images/favicon.png" type="image/png">
 </head>
 
@@ -49,8 +49,9 @@
                 <span class="popup__input-name-err popup__err" aria-live="polite">Неправильный формат
                   email</span>
                 <span class="popup__tip">Пароль</span>
-                <input required type="password" minlength="8" name="link"
-                  class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
+                <input required type="password" name="link" minlength="8"
+                  class="popup__input popup__input_type_link-url" placeholder="Введите пароль, минимум 8 символов">
+                  <span class="popup__err" aria-live="polite">Необходимо ввести пароль</span>
                 <button type="submit" class="popup__button">Войти</button>
               </form>
               <div class="popup__reg">
@@ -171,6 +172,11 @@
         <section class="about">
           <div class="about__wrapper">
             <div class="about__photo">
+              <picture>
+                <source media="(max-width: 1023px)" srcset="./images/avatar-300.png" >
+                <source media="(max-width: 1600px)" srcset="./images/avatar-500.png" >
+                <img class="about__img" src="./images/avatar.png" alt="Фото на аватар">
+              </picture>
             </div>
             <div class="about__content">
               <h2 class="about__title">Об авторе</h2>
@@ -203,7 +209,7 @@
       </footer>
     </div>
   </div>
-  <script src="main.1277d8ed4b841e8877dc.js"></script>
+  <script src="main.d644f240761308deb1d8.js"></script>
 </body>
 
 </html>
