--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
             <li class="menu__item menu__item_active"><a class="menu__column-link menu__column-link_active"
                 href="./">Главная</a></li>
             <li class="menu__item"><a class="menu__column-link" href="./about/">О проекте</a></li>
-            <li class="menu__item menu__item_hidden" ><a class="menu__column-link menu__column-link_hidden" href="./news/">Сохранённые статьи</a></li>
+            <li class="menu__item menu__item_hidden"><a class="menu__column-link menu__column-link_hidden"
+                href="./news/">Сохранённые статьи</a></li>
             <li class="menu__item"><a class="menu__column-link  menu__link-auth" href="">Авторизоваться</a></li>
           </ul>
         </nav>
@@ -51,7 +52,7 @@
                 <span class="popup__tip">Пароль</span>
                 <input required type="password" name="link" minlength="8"
                   class="popup__input popup__input_type_link-url" placeholder="Введите пароль, минимум 8 символов">
-                  <span class="popup__err" aria-live="polite">Необходимо ввести пароль</span>
+                <span class="popup__err" aria-live="polite">Необходимо ввести пароль</span>
                 <button type="submit" class="popup__button">Войти</button>
               </form>
               <div class="popup__reg">
@@ -72,11 +73,11 @@
                 <span class="popup__tip">Пароль</span>
                 <input required type="password" minlength="8" name="pass"
                   class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
-                  <span class="popup__input-pass-err popup__err"  aria-live="polite">Минимум 8 символов</span>
+                <span class="popup__input-pass-err popup__err" aria-live="polite">Минимум 8 символов</span>
                 <span class="popup__tip">Имя</span>
-                <input required type="text" minlength="2" name="link"
-                  class="popup__input popup__input_type_link-url" placeholder="Введите имя">
-                  <span class="popup__input-pass-err popup__err" aria-live="polite">Минимум 2 символа</span>
+                <input required type="text" minlength="2" name="link" class="popup__input popup__input_type_link-url"
+                  placeholder="Введите имя">
+                <span class="popup__input-pass-err popup__err" aria-live="polite">Минимум 2 символа</span>
                 <button type="submit" class="popup__button">Войти</button>
               </form>
               <div class="popup__reg">
@@ -85,13 +86,13 @@
           </div>
           <!-- Успешная регистрация -->
           <div class="popup popupReg">
-              <div class="popup__content_succeeded">
-                <img src="<%=require('./images/close.svg')%>" alt="закрытие формы" class="popup__close">
-                <h3 class="popup__title">Пользователь успешно зарегистрирован!</h3>
-                <div class="popup__reg_succeeded">
+            <div class="popup__content_succeeded">
+              <img src="<%=require('./images/close.svg')%>" alt="закрытие формы" class="popup__close">
+              <h3 class="popup__title">Пользователь успешно зарегистрирован!</h3>
+              <div class="popup__reg_succeeded">
                 <a class="popup__reg-link" href="">Выполнить вход</a></div>
-              </div>
             </div>
+          </div>
         </div>
       </header>
       <main>
@@ -173,8 +174,8 @@
           <div class="about__wrapper">
             <div class="about__photo">
               <picture>
-                <source media="(max-width: 1023px)" srcset="<%= require('./images/avatar-300.png')%>" >
-                <source media="(max-width: 1600px)" srcset="<%= require('./images/avatar-500.png')%>" >
+                <source media="(max-width: 1023px)" srcset="<%= require('./images/avatar-300.png')%>">
+                <source media="(max-width: 1600px)" srcset="<%= require('./images/avatar-500.png')%>">
                 <img class="about__img" src="<%= require('./images/avatar.png')%>" alt="Фото на аватар">
               </picture>
             </div>
@@ -182,7 +183,7 @@
               <h2 class="about__title">Об авторе</h2>
               <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
                 занимаетесь, какими технологиями разработки владеете.</p>
-                <p class="about__text">
+              <p class="about__text">
                 Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
                 потенциальным заказчикам.</p>
             </div>
