--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <ul class="menu__column-links">
             <li class="menu__item menu__item_active"><a class="menu__column-link menu__column-link_active"
                 href="./">Главная</a></li>
-            <li class="menu__item menu__item_hidden"><a id="stored-articles" class="menu__column-link menu__column-link_hidden"
+            <li class="menu__item menu__item_stored-articles menu__item_hidden"><a id="stored-articles" class="menu__column-link menu__column-link_hidden"
                 href="./news/">Сохранённые статьи</a></li>
             <li class="menu__item">
                 <div class="menu__column-link">
