--- a/index.html
+++ b/index.html
@@ -22,106 +22,34 @@
           <ul class="menu__column-links">
             <li class="menu__item menu__item_active"><a class="menu__column-link menu__column-link_active"
                 href="./">Главная</a></li>
-            <li class="menu__item menu__item_stored-articles menu__item_hidden"><a id="stored-articles" class="menu__column-link menu__column-link_hidden"
-                href="./news/">Сохранённые статьи</a></li>
+            <li class="menu__item menu__item_stored-articles menu__item_hidden"><a id="stored-articles"
+                class="menu__column-link menu__column-link_hidden" href="./news/">Сохранённые статьи</a></li>
             <li class="menu__item">
-                <div class="menu__column-link">
-                  <div class="menu__link-auth-container">
-                    <span class="menu__link-auth">Авторизоваться</span>
-                    <img class="menu__logout-icon" src="./images/logout-white.svg" alt="logout button">
-                  </div>
+              <div class="menu__column-link">
+                <div class="menu__link-auth-container">
+                  <span class="menu__link-auth">Авторизоваться</span>
+                  <img class="menu__logout-icon" src="./images/logout-white.svg" alt="logout button">
                 </div>
+              </div>
             </li>
           </ul>
         </nav>
-        <!-- <div class="menu__mobile-content">
-          <ul class="menu__column-links_mobile">
-            <li class="menu__item"><a class="menu__column-link menu__column-link_link_mobile"
-                href="./">Главная</a></li>
-            <li class="menu__item menu__item_hidden menu__column-link_link_mobile"><a id="stored-articles" class="menu__column-link menu__column-link_hidden"
-                href="./news/">Сохранённые статьи</a></li>
-            <li class="menu__item">
-                <div class="menu__column-link menu__column-link_link_mobile">
-                  <div class="menu__link-auth-container">
-                    <span class="menu__link-auth">Авторизоваться</span>
-                    <img class="menu__logout-icon" src="./images/logout-white.svg" alt="logout button">
-                  </div>
-                </div>
-            </li>
-          </ul>
-        </div> -->
         <div class="header__wrapper">
           <h1 class="header__title title">Что в мире творится?</h1>
           <p class="header__description description">Находите самые свежие статьи на любую тему и сохраняйте в своём
             личном кабинете.</p>
           <form name="search" novalidate class="header__bar">
-            <input required id="searchInput" minlength="1" name="query" class="header__input" type="text" placeholder="Природа">
+            <input required id="searchInput" minlength="1" name="query" class="header__input" type="text"
+              placeholder="Природа">
             <button type="submit" disabled class="button header-search__button">Искать</button>
           </form>
           <span class="popup__err" aria-live="polite">Нужно ввести ключевое слово</span>
         </div>
         <div class="popup-form">
-          <!-- Форма входа -->
-          <!-- <div class="popup popupAdd">
-            <div class="popup__content">
-              <img src="./images/close.svg" alt="закрытие формы" class="popup__close">
-              <h3 class="popup__title">Вход</h3>
-              <form class="popup__form" name="signin">
-                <span class="popup__tip">Email</span>
-                <input id="input-mail" required type="email" name="name" class="popup__input popup__input_type_name"
-                  placeholder="Введите почту">
-                <span class="popup__input-name-err popup__err" aria-live="polite">Неправильный формат
-                  email</span>
-                <span class="popup__tip">Пароль</span>
-                <input required type="password" name="pass" minlength="8"
-                  class="popup__input popup__input_type_link-url" placeholder="Введите пароль, минимум 8 символов">
-                <span class="popup__err" aria-live="polite">Необходимо ввести пароль</span>
-                <button id="signin-submit" type="submit" class="popup__button" disabled>Войти</button>
-              </form>
-              <div class="popup__reg">
-                <span class="popup__reg-sp">или </span> <span class="popup__reg-link popup__callReg" id="open-signin-form">Зарегистрироваться</span></div>
-            </div>
-          </div> -->
-          <!-- Форма регистрации -->
-          <!-- <div class="popup popupReg">
-            <div class="popup__content">
-              <img id="popupClose" src="./images/close.svg" alt="закрытие формы" class="popup__close">
-              <h3 class="popup__title">Регистрация</h3>
-              <form class="popup__form" name="new">
-                <span class="popup__tip">Email</span>
-                <input required type="email" name="name" class="popup__input popup__input_type_name"
-                  placeholder="Введите почту">
-                <span class="popup__input-name-err popup__err" aria-live="polite">Неправильный формат
-                  email</span>
-                <span class="popup__tip">Пароль</span>
-                <input required type="password" minlength="8" name="pass"
-                  class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
-                <span class="popup__input-pass-err popup__err" aria-live="polite">Минимум 8 символов</span>
-                <span class="popup__tip">Имя</span>
-                <input required type="text" minlength="2" name="link" class="popup__input popup__input_type_link-url"
-                  placeholder="Введите имя">
-                <span class="popup__input-pass-err popup__err" aria-live="polite">Минимум 2 символа</span>
-                <button type="submit" id="signup-submit" class="popup__button">Войти</button>
-              </form>
-              <div class="popup__reg">
-                <span class="popup__reg-sp">или </span> <span class="popup__reg-link" id="open-login-form">Войти</span></div>
-            </div>
-          </div> -->
-          <!-- Успешная регистрация -->
-          <!-- <div class="popup popupReg"> -->
-          <!-- <div class="popup popupSucceded">
-
-            <div class="popup__content-succeeded">
-              <img src="./images/close.svg" alt="закрытие формы" class="popup__close">
-              <h3 class="popup__title">Пользователь успешно зарегистрирован!</h3>
-              <div class="popup__reg_succeeded">
-                <span class="popup__reg-link" >Выполнить вход</span></div>
-            </div>
-          </div> -->
         </div>
       </header>
       <main>
-        <section class="preloader" >
+        <section class="preloader">
           <div class="preloader__wrapper preloader__wrapper_search">
             <i class="preloader__circle"></i>
             <span class="preloader__search-text">Идет поиск новостей...</span>
@@ -134,16 +62,14 @@
               ничего не найдено...</span>
           </div>
         </section>
-
         <section class="results">
           <div class="results__main-container">
             <h2 class="results__title">Результаты поиска</h2>
-            <div id ="resultsContiner" class="results__continer">
+            <div id="resultsContiner" class="results__continer">
             </div>
             <button class="button results__show-more">Показать еще</button>
           </div>
         </section>
-
         <section class="about">
           <div class="about__wrapper">
             <div class="about__photo">
@@ -155,11 +81,13 @@
             </div>
             <div class="about__content">
               <h2 class="about__title">Об авторе</h2>
-              <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
-                занимаетесь, какими технологиями разработки владеете.</p>
+              <p class="about__text">Привет, меня зовут Владимир. Я прошёл курсы веб-разработчика в Яндекс.Практикум,
+                где изучил HTML, CSS,
+                JavaScript, Node.js и основы работы с MongoDB.</p>
               <p class="about__text">
-                Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
-                потенциальным заказчикам.</p>
+                За время обучения я выполнил несколько проектов по адаптивной верстке, работе с пользователями,
+                асинхронным запросам к серверу,
+                построению RESTful API, написанию серверного кода и многому другому.</p>
             </div>
           </div>
         </section>
@@ -183,7 +111,7 @@
       </footer>
     </div>
   </div>
-  <script src="main.c4f7f1f01c9e3396b93e.js"></script>
+  <script src="main.5a299801b0065b1549ba.js"></script>
 </body>
 
 </html>
