--- a/index.html
+++ b/index.html
@@ -46,6 +46,63 @@
           <span class="popup__err" aria-live="polite">Нужно ввести ключевое слово</span>
         </div>
         <div class="popup-form">
+          <!-- Форма входа -->
+          <!-- <div class="popup popupAdd">
+            <div class="popup__content">
+              <img src="./images/close.svg" alt="закрытие формы" class="popup__close">
+              <h3 class="popup__title">Вход</h3>
+              <form class="popup__form" name="signin">
+                <span class="popup__tip">Email</span>
+                <input id="input-mail" required type="email" name="name" class="popup__input popup__input_type_name"
+                  placeholder="Введите почту">
+                <span class="popup__input-name-err popup__err" aria-live="polite">Неправильный формат
+                  email</span>
+                <span class="popup__tip">Пароль</span>
+                <input required type="password" name="pass" minlength="8"
+                  class="popup__input popup__input_type_link-url" placeholder="Введите пароль, минимум 8 символов">
+                <span class="popup__err" aria-live="polite">Необходимо ввести пароль</span>
+                <button id="signin-submit" type="submit" class="popup__button" disabled>Войти</button>
+              </form>
+              <div class="popup__reg">
+                <span class="popup__reg-sp">или </span> <span class="popup__reg-link popup__callReg" id="open-signin-form">Зарегистрироваться</span></div>
+            </div>
+          </div> -->
+          <!-- Форма регистрации -->
+          <!-- <div class="popup popupReg">
+            <div class="popup__content">
+              <img id="popupClose" src="./images/close.svg" alt="закрытие формы" class="popup__close">
+              <h3 class="popup__title">Регистрация</h3>
+              <form class="popup__form" name="new">
+                <span class="popup__tip">Email</span>
+                <input required type="email" name="name" class="popup__input popup__input_type_name"
+                  placeholder="Введите почту">
+                <span class="popup__input-name-err popup__err" aria-live="polite">Неправильный формат
+                  email</span>
+                <span class="popup__tip">Пароль</span>
+                <input required type="password" minlength="8" name="pass"
+                  class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
+                <span class="popup__input-pass-err popup__err" aria-live="polite">Минимум 8 символов</span>
+                <span class="popup__tip">Имя</span>
+                <input required type="text" minlength="2" name="link" class="popup__input popup__input_type_link-url"
+                  placeholder="Введите имя">
+                <span class="popup__input-pass-err popup__err" aria-live="polite">Минимум 2 символа</span>
+                <button type="submit" id="signup-submit" class="popup__button">Войти</button>
+              </form>
+              <div class="popup__reg">
+                <span class="popup__reg-sp">или </span> <span class="popup__reg-link" id="open-login-form">Войти</span></div>
+            </div>
+          </div> -->
+          <!-- Успешная регистрация -->
+          <!-- <div class="popup popupReg"> -->
+          <!-- <div class="popup popupSucceded">
+
+            <div class="popup__content-succeeded">
+              <img src="./images/close.svg" alt="закрытие формы" class="popup__close">
+              <h3 class="popup__title">Пользователь успешно зарегистрирован!</h3>
+              <div class="popup__reg_succeeded">
+                <span class="popup__reg-link" >Выполнить вход</span></div>
+            </div>
+          </div> -->
         </div>
       </header>
       <main>
@@ -62,6 +119,7 @@
               ничего не найдено...</span>
           </div>
         </section>
+
         <section class="results">
           <div class="results__main-container">
             <h2 class="results__title">Результаты поиска</h2>
@@ -70,6 +128,7 @@
             <button class="button results__show-more">Показать еще</button>
           </div>
         </section>
+
         <section class="about">
           <div class="about__wrapper">
             <div class="about__photo">
@@ -111,7 +170,7 @@
       </footer>
     </div>
   </div>
-  <script src="main.5a299801b0065b1549ba.js"></script>
+  <script src="main.66994eaba8e2b30e5f91.js"></script>
 </body>
 
 </html>
